--- a/css/docker/main.css
+++ b/css/docker/main.css
@@ -7,12 +7,47 @@
     background-color: #e9ebee;
 }
 
-#wave {
+.bird {
+    position: absolute;
+    transform: translate(-100%);
+}
+
+.bird__animations {
+    background-image: url(../../img/docker/flying-bird.svg);
+    background-size: auto 100%;
+    width: 88px;
+	height: 125px;
+	will-change: background-position;
+    animation: flying 1.25s steps(10) infinite;
+    transform: scale(0.3);
+}
+
+#bird--1 {
+    animation: fly-right-1 8s linear infinite 5s;
+}
+
+#bird--2 {
+    animation: fly-right-2 6s linear infinite;
+}
+
+#bird--3 {
+    animation: fly-right-3 7s linear infinite 10s;
+}
+
+#bird--4 {
+    animation: fly-right-4 6s linear infinite 15s;
+}
+
+#bird--5 {
+    animation: fly-right-5 8s linear infinite 20s;
+}
+
+#header__background {
     position: absolute;
     z-index: -100;
 }
 
-#wave svg {
+#wave {
     bottom: 0;
     position: absolute;
     animation: wave-appearance 3s;
@@ -40,6 +75,72 @@
     animation:
         floating 3s infinite ease-in-out 4s,
         logo-appearance 4s ease-in-out;
+}
+
+@keyframes flying {
+	100% {
+		background-position: -900px 0;
+	}
+}
+
+@keyframes fly-right-1 {
+	0% {
+		transform: translate(-100%, 0);
+	}
+	50% {
+		transform: translate(50vw, 5vh);
+	}
+	100% {
+		transform: translate(110vw, 2vh);
+	}
+}
+
+@keyframes fly-right-2 {
+	0% {
+		transform: translate(-100%, 30vh);
+	}
+	50% {
+		transform: translate(50vw, 25vh);
+	}
+	100% {
+		transform: translate(110vw, 30vh);
+	}
+}
+
+@keyframes fly-right-3 {
+	0% {
+		transform: translate(-100%, 25vh);
+	}
+	50% {
+		transform: translate(50vw, 20vh);
+	}
+	100% {
+		transform: translate(110vw, 35vh);
+	}
+}
+
+@keyframes fly-right-4 {
+	0% {
+		transform: translate(-100%, 0);
+	}
+	50% {
+		transform: translate(50vw, 10vh);
+	}
+	100% {
+		transform: translate(110vw, -15vh);
+	}
+}
+
+@keyframes fly-right-5 {
+	0% {
+		transform: translate(-100%, 0);
+	}
+	50% {
+		transform: translate(50vw, 5vh);
+    }
+	100% {
+		transform: translate(110vw, 2vh);
+	}
 }
 
 @keyframes floating {
@@ -100,6 +201,116 @@
 }
 
 @media (min-width: 1280px) {
+    #bird--1 {
+        animation-duration: 18s;
+    }
+    
+    #bird--2 {
+        animation-duration: 22s;
+    }
+    
+    #bird--3 {
+        animation-duration: 20s;
+    }
+    
+    #bird--4 {
+        animation-duration: 21s;
+    }
+    
+    #bird--5 {
+        animation-duration: 20s;
+    }
+
+    @keyframes fly-right-1 {
+        0% {
+            transform: translate(-100%, 0);
+        }
+        25% {
+            transform: translate(25vw, 2vh);
+        }
+        50% {
+            transform: translate(50vw, 5vh);
+        }	
+        75% {
+            transform: translate(75vw, -5vh);
+        }
+        100% {
+            transform: translate(110vw, 2vh);
+        }
+    }
+    
+    @keyframes fly-right-2 {
+        0% {
+            transform: translate(-100%, 20vh);
+        }
+        25% {
+            transform: translate(25vw, 25vh);
+        }
+        50% {
+            transform: translate(50vw, 15vh);
+        }	
+        75% {
+            transform: translate(75vw, 20vh);
+        }
+        100% {
+            transform: translate(110vw, 20vh);
+        }
+    }
+    
+    @keyframes fly-right-3 {
+        0% {
+            transform: translate(-100%, 25vh);
+        }
+        25% {
+            transform: translate(25vw, 20vh);
+        }
+        50% {
+            transform: translate(50vw, 20vh);
+        }	
+        75% {
+            transform: translate(75vw, 25vh);
+        }
+        100% {
+            transform: translate(110vw, 35vh);
+        }
+    }
+    
+    @keyframes fly-right-4 {
+        0% {
+            transform: translate(-100%, 0);
+        }
+        25% {
+            transform: translate(25vw, 0);
+        }
+        50% {
+            transform: translate(50vw, 10vh);
+        }	
+        75% {
+            transform: translate(75vw, -10vh);
+        }
+        100% {
+            transform: translate(110vw, -15vh);
+        }
+    }
+    
+    @keyframes fly-right-5 {
+        0% {
+            transform: translate(-100%, 0);
+        }
+        25% {
+            transform: translate(25vw, 2vh);
+        }
+        50% {
+            transform: translate(50vw, 5vh);
+        }	
+        75% {
+            transform: translate(75vw, -5vh);
+        }
+        100% {
+            transform: translate(110vw, 2vh);
+        }
+    }
+
     @keyframes logo-appearance {
         0% {
             transform: translate(-50%, 100%);
