--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -9,16 +9,27 @@
   box-sizing: border-box;
 }
 
-header {
+body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+header,
+section {
   height: 100vh;
   width: 100vw;
   position: relative;
   overflow: hidden;
+  z-index: -5;
 }
 
 .background {
   width: 100%;
   height: 100%;
   position: absolute;
-  z-index: -5;
+  z-index: -4;
 }
